Removed EJS stuff.

--- a/password/index.html
+++ b/password/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Pasword Generator by Joe Pea</title>
     <meta charset="utf8" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <!-- TODO?: make a common header file for most pages.  -->
@@ -9,7 +9,7 @@
     <script src="/javascripts/x.js"></script>
   </head>
   <body>
-    <h1 id="title"><%= title %></h1>
+    <h1 id="title">Password Generator by Joe Pea</h1>
 
   </body>
 </html>
