Added jQuery 1.8.3 and style.css.

--- a/password/index.html
+++ b/password/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Pasword Generator by Joe Pea</title>
     <meta charset="utf8" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- TODO?: make a common header file for most pages.  -->
-    <script src="/javascripts/jquery-1.8.3.min.js"></script>
-    <script src="/javascripts/x.js"></script>
+    <script src="jquery-1.8.3.min.js"></script>
+    <script src="x.js"></script>
   </head>
   <body>
     <h1 id="title">Password Generator by Joe Pea</h1>
