Starting to add random password generation based on mouse movement seeding.

--- a/password/index.html
+++ b/password/index.html
@@ -9,7 +9,8 @@
     <script src="x.js"></script>
   </head>
   <body>
-    <h1 id="title">Password Generator by Joe Pea</h1>
+      <h1 id="title">Password Generator by Joe Pea</h1>
+      <h2>Move your mouse pointer around the page to generate random noise.</h2>
 
   </body>
 </html>
