Converted all numbers to Big() numbers using github.com/MikeMcl/big.js.

--- a/password/index.html
+++ b/password/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pasword Generator by Joe Pea</title>
-    <meta charset="utf8" />
-    <link rel="stylesheet" href="style.css" />
-    <!-- TODO?: make a common header file for most pages.  -->
-    <script src="jquery-1.8.3.min.js"></script>
-    <script src="x.js"></script>
-  </head>
-  <body>
-      <h1 id="title">Password Generator by Joe Pea</h1>
-      <h2>Move your mouse pointer around the page to generate random noise.</h2>
+    <head>
+        <title>Pasword Generator by Joe Pea</title>
+        <meta charset="utf8" />
+        <link rel="stylesheet" href="style.css" />
+        <!-- TODO?: make a common header file for most pages.  -->
+        <script src="jquery-1.8.3.min.js"></script>
+        <script src="big.min.js"></script>
+        <script src="x.js"></script>
+    </head>
+    <body>
+        <div id="generator">
+            <h1 id="password">Password Generator by Joe Pea.<br />Move your cursor to generate randomness.</h1>
+            <button id="generate" disabled="disabled">generate</button>
+        </div>
 
-  </body>
+    </body>
 </html>
