--- a/password/index.html
+++ b/password/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css" />
         <!-- TODO?: make a common header file for most pages.  -->
         <script src="jquery-1.8.3.min.js"></script>
-        <script src="big.min.js"></script>
+        <script src="bignumber.js"></script>
         <script src="x.js"></script>
     </head>
     <body>
