Ok, done! Added a nice button, and shadow. Now I'm gonna finish my app for SFS\!

--- a/password/index.html
+++ b/password/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="generator">
             <h1 id="password">Password Generator by Joe Pea.<br />Move your cursor to generate randomness.</h1>
-            <button id="generate" disabled="disabled">generate</button>
+            <button id="generate" disabled="disabled">generate password</button>
         </div>
 
     </body>
