Remade the structure so password gen is homepage, with links to other pages.

--- a/password/index.html
+++ b/password/index.html
@@ -10,6 +10,14 @@
         <script src="x.js"></script>
     </head>
     <body>
+        <menu id="menu">
+            <li class="menuitem">
+                <a href="../hello/">about me</a>
+            </li><br />
+            <li class="menuitem">
+                <a href="../portfolio/">portfolio</a>
+            </li><br />
+        </menu>
         <div id="generator">
             <h1 id="password">Password Generator by Joe Pea.<br />Move your cursor to generate randomness.</h1>
             <button id="generate" disabled="disabled">generate password</button>
