--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script>
-      window.location = "./hello.php";
-    </script>
-    <title>Joe Pea - CSc at CSUS</title>
-    <script src=" http://code.jquery.com/jquery-1.9.1.js"></script>
-<meta http-equiv="Expires" content="Tue, 01 Jan 1995 12:12:12 GMT">
-<meta http-equiv="Pragma" content="no-cache">
-  </head>
-  <body>
-  </body>
+    <head>
+        <script>
+            window.location = "./password/";
+        </script>
+        <title>Joe Pea - CSc at CSUS</title>
+        <script src=" http://code.jquery.com/jquery-1.9.1.js"></script>
+        <meta http-equiv="Expires" content="Tue, 01 Jan 1995 12:12:12 GMT">
+        <meta http-equiv="Pragma" content="no-cache">
+    </head>
+    <body>
+    </body>
 </html>
