Removed console.logs (commented). Styled the menu on the password page.

--- a/password/index.html
+++ b/password/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <menu id="menu">
+            <li class="menuitem" style="color: #ccc">Joe Pea</li><br />
             <li class="menuitem">
                 <a href="../hello/">about me</a>
             </li><br />
