Small fix to blumblumshub formula and reworded facebook sections.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,7 +78,7 @@ h1 {
 
                     <p class="in">Here you can see my random password generator as well as information about me. The password generator takes the user's random mouse movement to enhance seeding during random number generation. The generator also makes use of discrete Blum Blum Shub sequences. A Blum Blum Shub sequence is a sequence of numbers that have no apparent pattern. The formula is</p>
 
-                    <p class="in">X[n] = X[n-1]^2 % M</p>
+                    <pre class="in">X[n] = X[n-1]^2 % M</pre>
 
                     <p class="in">where M is a product of two arbitrary primes (the bigger the better) and the first number in the sequence, X[0], is arbitrarily chosen.</p>
 
@@ -116,7 +116,7 @@ h1 {
 
             <pre>-- <a href="http://facebook.com/media/set/?set=a.10150253318205771.322210.604985770" target="_blank">http://facebook.com/media/set/?set=a.10150253318205771.322210.604985770</a> --</pre>
 
-                    <p class="in">Some of my work can also be seen here (my facebook portfolio album).</p></em>
+                    <p class="in">Some of my work can be seen on my facebook portfolio album (you might need to be logged in to facebook to see it.</p></em>
         </div>
         <p><em>I'd like to include more, but due to the transition to my new personal server, I haven't put everything back up yet.</em>
 
