Added note to use Chrome of FIrefox for best result.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,7 +89,7 @@ h1 {
     <body>
         <h1>Joseph O Pea - Info Sheet</h1>
 
-        <p><em>The following is a list of some things I've made or am working on. A portfolio of sorts.</em></p>
+        <p><em>The following is a list of some things I've made or am working on. A portfolio of sorts. (This looks best in Chrome or Firefox)</em></p>
         <div class="in">
             <div class="linkSection">
             <pre><div class="preLink"><a class="noroll roll"><span class="dashes">-- </span></a><a href="http://ecs.csus.edu/~peaj" target="_blank">http://ecs.csus.edu/~peaj</a> <span style="font-size: 1.5em;">↴</span></div></pre>
