--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,8 @@
 
 <script>
 if (navigator.appVersion.indexOf("Chrome/") != -1) {
-    document.write('<style>.preLink > span {position:relative; top:5px;} </style>');
+    document.write('<style>.preLink > span {position:relative; top:9px;} </style>');
+    document.write('<style>.preLink > .noroll.roll {position:relative; top:5px;} </style>');
 }
 </script>
 
@@ -209,15 +210,16 @@ h1 {
                         if( supports3DTransforms ) {
 
                             var nodes = document.querySelectorAll( selector );
+                            if (navigator.appVersion.indexOf("Chrome/") == -1) {
+                                for( var i = 0, len = nodes.length; i < len; i++ ) {
+                                    var node = nodes[i];
 
-                            for( var i = 0, len = nodes.length; i < len; i++ ) {
-                                var node = nodes[i];
-
-                                if( !node.className || (!node.className.match( /roll/g ) && !node.className.match( /noroll/g )) ) {
-                                    node.className += ' roll';
-                                    node.innerHTML = '<span data-title="'+ node.text +'">' + node.innerHTML + '</span>';
-                                }
-                            };
+                                    if( !node.className || (!node.className.match( /roll/g ) && !node.className.match( /noroll/g )) ) {
+                                        node.className += ' roll';
+                                        node.innerHTML = '<span data-title="'+ node.text +'">' + node.innerHTML + '</span>';
+                                    }
+                                };
+                            }
                         }
                     }
 
