Made main links bigger. Made pre-formatted stuff wrap.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,12 +37,18 @@ a {
     text-decoration: none;
     color: #d36f14;
 }
+pre {
+    white-space: pre-wrap;
+}
 .linkSection {
     padding: 1px;
 }
 .linkSection.hover {
     background-color: rgba(0,0,0,0.2);
     color: white;
+}
+.preLink {
+    font-size: 1.2em;
 }
 .preLink span.dashes {
     color: #bbb;
