Fixed typo with title in password generator (pasword to password)

--- a/password/index.html
+++ b/password/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pasword Generator by Joe Pea</title>
+        <title>Password Generator by Joe Pea</title>
         <meta charset="utf8" />
         <link rel="stylesheet" href="style.css" />
         <!-- TODO?: make a common header file for most pages.  -->
