--- a/password/index.html
+++ b/password/index.html
@@ -12,11 +12,20 @@
     <body>
         <menu id="menu">
             <li class="menuitem" style="color: #ccc">Joe Pea</li><br />
-            <li class="menuitem">
+            <li class="sub menuitem">
                 <a href="../hello/">about me</a>
             </li><br />
-            <li class="menuitem">
+            <li class="sub menuitem">
                 <a href="../portfolio/">portfolio</a>
+            </li><br />
+
+            <br />
+            <li class="menuitem" style="color: #ccc">CSC 135</li><br />
+            <li class="sub menuitem">
+                <a href="../PL1/">PL Hwk 1</a>
+            </li><br />
+            <li class="sub menuitem">
+                <a href="../PL2/">PL Hwk 2</a>
             </li><br />
         </menu>
         <div id="generator">
