--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -119,6 +119,7 @@ h1 {
         </style>
     </head>
     <body>
+        <a href="../password/">&lt;&lt; Go Back</a>
         <h1>Joseph O Pea - Info Sheet</h1>
 
         <p><em>The following is a list of some things I've made or am working on. A portfolio of sorts. (This looks best in Chrome or Firefox)</em></p>
