--- a/PL2/index.html
+++ b/PL2/index.html
@@ -17,42 +17,37 @@
             <span id="name"><a href="../password/">&lt;&lt; Go Back</a></span>
         </div>
         <div id="more" class="lighterText">
+            <h2><span>PL Assignment 2 - Brief History of Functional Programming:</span></h2>
             <p>
-                <h2><span>PL Assignment 2 - History of Functional Programming:</span></h2>
-                <dl id="pl1-defs">
-                    <dt><dfn><h3>syntax</h3></h3></dfn></dt>
-                        <dd>Those aspects of a programming language that can be modeled by a context-free grammar.<br />
-                        <span class="source">Source: Formal Languages and Automata, 5th Edition, by Peter Linz, Page 147.</span>
-                        </dd>
-                    <dt><dfn><h3>semantics</h3></dfn></dt>
-                        <dd>Semantics are the rules of a language that cannot be described by a context-free grammar.
-                            For example, the BNF for the C language allows things like <span class="inlinecode">char x,y,z; z=4.3</span>
-                            but a compiler would not let that pass.<br />
-                        <span class="source">Source: Formal Languages and Automata, 5th Edition, by Peter Linz, Page 147.</span>
-                        </dd>
-                    <dt><dfn><h3>lexical scanning</h3></dfn></dt>
-                        <dd>A lexical scanner allows one to use multi-character terminal symbols in a parser. Without a
-                        lexical scanner, only single character terminals are effective in a parser.
-                        Lexical scanning is the process of scanning the stream of input characters and
-                        separating it into strings called tokens.<br />
-                        <span class="source">Source: <a target="_blank" href="http://pp4s.co.uk/main/tu-trans-comp-jc-07.html">pp4s.co.uk/main/tu-trans-comp-jc-07.html</a></span>
-                        </dd>
-                    <dt><dfn><h3>parsing</h3></dfn></dt>
-                        <dd> The term parsing means finding a sequence of productions (belonging to a grammer G)
-                        by which a string <span class="inlinecode"><i>ω</i> ϵ <i>L(G)</i></span> is derived.<br />
-                        <span class="source">Source: Formal Languages and Automata, 5th Edition, by Peter Linz, Page 136.</span>
-                        </dd>
-                    <dt><dfn><h3>parser</h3></dfn></dt>
-                        <dd>A parser is a program that can read a human-like, english-like programming language and
-                        convert it into a language that the computer can understand and execute.<br />
-                        <span class="source">Source: <a target="_blank" href="http://goldparser.org/articles/parser.htm">goldparser.org/articles/parser.htm</a></span>
-                        </dd>
-                    <dt><dfn><h3>parser generator</h3></dfn></dt>
-                        <dd>A generator reads information from a source grammar and then generates the token tables
-                        that a parser can use to parse a string.<br />
-                        <span class="source">Source: <a target="_blank" href="http://goldparser.org/articles/parser.htm">goldparser.org/articles/parser.htm</a></span>
-                        </dd>
-                </dl>
+                IPL (the Information Processing Language) is believed to be the
+                first functional computer programming language, created by
+                Allen Newel, Cliff Shaw, and Herbert A. Simon at the RAND
+                Corporation and at the Carnegie Institute of Technology in
+                1956. The motivation behind IPL was to create a language with
+                the ability to manipulate lists and and to support functions
+                that could take other functions as arguments (i.e. lambda
+                functions). IPL was an assembly-like language.
+                <br /><span class="source">Source: <a href="http://wikipedia.org/wiki/Information_Processing_Language">wikipedia.org/wiki/Information_Processing_Language</a></span>
+            </p>
+            <p>
+                Shortly after, in 1958, John McCarthy began working on the
+                language known as Lisp at the Massachusetts Institute of Technology.
+                The motivation behind Lisp was to create a higher level (i.e.
+                not assembly-like) language that was good for developing
+                artificial intelligence.  Lisp is a list processing language,
+                as a list processing language seemed appropriate for
+                programming the operations involved with deduction. Lisp also
+                supports lambda functions. Languages like Scheme have been inspired by Lisp.
+                <br /><span class="source">Source: <a href="http://www-formal.stanford.edu/jmc/history/lisp/lisp.html">www-formal.stanford.edu/jmc/history/lisp/lisp.html</a></span>
+            </p>
+            <p>
+                Today, Haskell is a popular functional programming language
+                that has been in constant development since 1987, with it's
+                first version being released in 1990. The motive behind Haskell
+                was to create an publicly open standard for functional
+                programming languages. It is one of the most modern functional
+                programming language that is still being developed.
+                <br /><span class="source">Source: <a href="http://wikipedia.org/wiki/Haskell_(programming_language)">wikipedia.org/wiki/Haskell_(programming_language)</a></span>
             </p>
         </div>
     </div>
