--- a/password/index.html
+++ b/password/index.html
@@ -27,6 +27,9 @@
             <li class="sub menuitem">
                 <a href="../PL2/">PL Hwk 2</a>
             </li><br />
+            <li class="sub menuitem">
+                <a href="../PL3/">PL Hwk 3</a>
+            </li><br />
         </menu>
         <div id="generator">
             <h1 id="password">Password Generator by Joe Pea.<br />Move your cursor to generate randomness.</h1>
