Made the form, now gotta connect it to the javascript

--- a/password/index.html
+++ b/password/index.html
@@ -30,6 +30,9 @@
             <li class="sub menuitem">
                 <a href="../PL3/">PL Hwk 3</a>
             </li><br />
+            <li class="sub menuitem">
+                <a href="../PL4/">PL Hwk 4</a>
+            </li><br />
         </menu>
         <div id="generator">
             <h1 id="password">Password Generator by Joe Pea.<br />Move your cursor to generate randomness.</h1>
