Working on PL4. Almost done. Taking way longer than I thought. :(

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -17,9 +17,10 @@
             <span id="name"><a href="../password/">&lt;&lt; Go Back</a></span>
         </div>
         <div id="more" class="lighterText">
-            <h2><span>PL Assignment 4 - Recursive Descent Parser</span></h2>
+            <!--<h2><span>PL Assignment 4 - Recursive Descent Parser</span></h2>-->
 
             <div class="in">
+                <div id="log"></div>
                 <form>
                     <input type="text" name="string" id="string" />
                 </form>
@@ -51,5 +52,6 @@ DIGIT  ::= 0 | 1 | 2 | 3
 
 
     <script src="./x.js"></script>
+    <script src="./recursive_descent.js"></script>
   </body>
 </html>
