Finished the coding for PL4. Now for the submission stuff.

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -17,15 +17,15 @@
             <span id="name"><a href="../password/">&lt;&lt; Go Back</a></span>
         </div>
         <div id="more" class="lighterText">
-            <!--<h2><span>PL Assignment 4 - Recursive Descent Parser</span></h2>-->
+            <h2><span>PL Assignment 4 - Recursive Descent Parser</span></h2>
 
             <div class="in">
                 <div id="log"></div>
                 <form>
-                    <input type="text" name="string" id="string" />
+                    <input type="text" name="string" id="string" /><label id="status">hello</label>
                 </form>
                 <p id="inputTip">
-                    ⬑ Enter a string of characters here to see if it's valid (keep reading for details).
+                    ⬑ <span>Enter a string of characters here to see if it's valid (keep reading for details).</span>
                 </p>
             </div>
 
