Removed all console.logs from PL4

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -22,7 +22,7 @@
             <div class="in">
                 <div id="log"></div>
                 <form>
-                    <input type="text" name="string" id="string" /><label id="status">hello</label>
+                    <input type="text" name="string" id="string" /><label id="usd">$&nbsp;&nbsp;&nbsp;&nbsp;(Don't worry about the dollar sign, it's here for you already)</label>
                 </form>
                 <p id="inputTip">
                     ⬑ <span>Enter a string of characters here to see if it's valid (keep reading for details).</span>
