Fixed small detail for PL4.

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <p>
-                This is a recognizer that tests whether or not an input string
+                This is a recursive descent recognizer that tests whether or not an input string
                 is described by the BNF grammar below (in english: this tool
                 tests whether a sequence of characters match the format that
                 we've specified by the ruleset below). In this case, if the string of characters
