PL4: Completed extra credit.

--- a/PL4/index.html
+++ b/PL4/index.html
@@ -80,6 +80,18 @@ DIGIT  ::= 0 | 1 | 2 | 3
             the resource didn't really cover how to keep track of matching parenthesis, so I had to make that up from scratch.
             </p>
 
+            <h2><span>PL Assignment 4 - Extra Credit</span></h2>
+
+            <div class="in">
+                <div id="logec"></div>
+                <form>
+                    <input type="text" name="stringec" id="stringec" /><label id="usd">$&nbsp;&nbsp;&nbsp;&nbsp;(Don't worry about the dollar sign, it's here for you already)</label>
+                </form>
+                <p id="inputTipEC">
+                    ⬑ <span>Enter a string of characters here to see if it's valid (keep reading for details).</span>
+                </p>
+            </div>
+
         </div><!-- #more -->
     </div><!-- #page -->
 
